--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "better-sqlite3": "^12.4.6",
     "dotenv": "^16.4.0",
     "sqlite3": "^5.1.7",
     "telegraf": "^4.16.3"
